--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -1,12 +1,13 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 32
+    compileSdk 33
+    buildToolsVersion = "33.0.2"
 
     defaultConfig {
         applicationId "com.huantansheng.easyphotos.demo"
         minSdkVersion 19
-        targetSdkVersion 32
+        targetSdkVersion 33
         versionCode 2
         versionName "1.0.2"
         multiDexEnabled true
@@ -18,9 +19,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-    lintOptions {
-        checkReleaseBuilds false
+    namespace 'com.huantansheng.easyphotos.demo'
+    lint {
         abortOnError false
+        checkReleaseBuilds false
     }
 
 }
@@ -37,9 +39,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.5.0'
     testImplementation 'junit:junit:4.13.2'
 
-//    implementation project(':easyPhotos')
-
-    implementation 'io.github.joker-fu:EasyPhotos:andX-2.5.7'
+    implementation project(':easyPhotos')
 
     implementation 'com.tencent.bugly:crashreport:3.3.92'
 
