--- a/easyPhotos/build.gradle
+++ b/easyPhotos/build.gradle
@@ -1,16 +1,18 @@
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 32
+    compileSdk 33
+    buildToolsVersion = "33.0.2"
 
     defaultConfig {
         minSdkVersion 19
-        targetSdkVersion 32
+        targetSdkVersion 33
         vectorDrawables.useSupportLibrary = true
     }
-    lintOptions {
-        checkReleaseBuilds false
+    namespace 'com.huantansheng.easyphotos'
+    lint {
         abortOnError false
+        checkReleaseBuilds false
     }
 
 }
