--- a/easyPhotos/build.gradle
+++ b/easyPhotos/build.gradle
@@ -1,4 +1,7 @@
-apply plugin: 'com.android.library'
+plugins {
+    id 'com.android.library'
+    id 'maven-publish'
+}
 
 android {
     compileSdk 33
@@ -14,26 +17,32 @@ android {
         abortOnError false
         checkReleaseBuilds false
     }
-
 }
 
 dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
-    implementation 'androidx.appcompat:appcompat:1.4.1'
-    implementation 'com.google.android.material:material:1.5.0'
-    implementation 'androidx.recyclerview:recyclerview:1.2.1'
-    implementation 'androidx.exifinterface:exifinterface:1.3.3'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation 'com.google.android.material:material:1.8.0'
+    implementation 'androidx.recyclerview:recyclerview:1.3.0'
+    implementation 'androidx.exifinterface:exifinterface:1.3.6'
     implementation 'com.github.chrisbanes:PhotoView:2.3.0'
     implementation 'com.github.yalantis:ucrop:2.2.6'
-    implementation "com.google.android.exoplayer:exoplayer:2.17.1"
+    implementation "com.google.android.exoplayer:exoplayer:2.18.5"
 }
 
-ext {
-    artifact = 'EasyPhotos'
-    libraryName = 'EasyPhotos'
-    libraryDescription = 'EasyPhotos 2.5.3'
-    libraryVersion = 'andX-2.5.7'
-}
+afterEvaluate {
+    publishing {
+        publications {
+            // Creates a Maven publication called "release".
+            release(MavenPublication) {
+                // Applies the component for the release build variant.
+                from components.release
 
-apply from: '../publish-mavencentral.gradle'
+                groupId = 'com.zhangls'
+                artifactId = 'EasyPhotos'
+                version = 'andX-2.5.8'
+            }
+        }
+    }
+}
