--- a/easyPhotos/build.gradle
+++ b/easyPhotos/build.gradle
@@ -4,15 +4,17 @@ plugins {
 }
 
 android {
-    compileSdk 33
-    buildToolsVersion = "33.0.2"
+    namespace 'com.huantansheng.easyphotos'
+    compileSdk 34
+    buildToolsVersion = "34.0.0"
 
     defaultConfig {
         minSdkVersion 19
-        targetSdkVersion 33
+        targetSdkVersion 34
         vectorDrawables.useSupportLibrary = true
+        consumerProguardFiles("consumer-rules.pro")
     }
-    namespace 'com.huantansheng.easyphotos'
+
     lint {
         abortOnError false
         checkReleaseBuilds false
@@ -20,15 +22,15 @@ android {
 }
 
 dependencies {
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'androidx.appcompat:appcompat:1.6.1'
-    implementation 'com.google.android.material:material:1.8.0'
-    implementation 'androidx.recyclerview:recyclerview:1.3.0'
-    implementation 'androidx.exifinterface:exifinterface:1.3.6'
-    implementation 'com.github.chrisbanes:PhotoView:2.3.0'
-    implementation 'com.github.yalantis:ucrop:2.2.6'
-    implementation "com.google.android.exoplayer:exoplayer:2.18.5"
+    implementation("androidx.constraintlayout:constraintlayout:2.1.4")
+    implementation("androidx.appcompat:appcompat:1.6.1")
+    implementation("androidx.recyclerview:recyclerview:1.3.2")
+    implementation("androidx.exifinterface:exifinterface:1.3.7")
+    implementation("androidx.media3:media3-ui:1.3.1")
+    implementation("androidx.media3:media3-exoplayer:1.3.1")
+    implementation("com.google.android.material:material:1.11.0")
+    implementation("com.github.chrisbanes:PhotoView:2.3.0")
+    implementation("com.github.yalantis:ucrop:2.2.8")
 }
 
 afterEvaluate {
@@ -41,7 +43,7 @@ afterEvaluate {
 
                 groupId = 'com.zhangls'
                 artifactId = 'EasyPhotos'
-                version = 'andX-2.5.8'
+                version = '2.6.0'
             }
         }
     }
