--- a/demo/build.gradle
+++ b/demo/build.gradle
@@ -48,7 +48,7 @@ dependencies {
     }
     annotationProcessor 'com.github.bumptech.glide:compiler:4.14.2'
 
-    implementation 'top.zibin:Luban:1.1.8'
+    implementation 'com.github.Curzibn:Luban:1.1.8'
     implementation "androidx.multidex:multidex:2.0.1"
 
     //检测内存泄漏
